[workspace]
members = [
    "macro",
]


[package]
name = "bitcoin-script"
version = "0.3.0"
authors = ["Lukas George lukas@zerosync.org", "Archidoge archidoge@riema.xyz"]
edition = "2021"
description = "Inline Bitcoin scripts"
license = "MIT"
repository = "https://github.com/RiemaLabs/rust-bitcoin-script"

[dependencies]
bitcoin = { version = "0.32.5" }
lazy_static = "1.5.0"
script-macro = { path = "./macro" }
stdext = "0.3.3"

[patch.crates-io]
bitcoin = { git = "https://github.com/RiemaLabs/rust-bitcoin", branch = "0.32.x-nubit" }
